changed underscore.date dependency, to not break with major version changes

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "soupselect": "https://github.com/pathsny/node-soupselect/tarball/master",
       "underscore": ">= 1.1.6",
       "compress" : ">= 0.1.9",
-      "underscore.date": ">= 0.4.0",
+      "underscore.date": ">=0.4.0 <0.5",
       "dirty": "https://github.com/pathsny/node-dirty/tarball/master",
       "request": "https://github.com/pathsny/request/tarball/master",
       "irc": "https://github.com/martynsmith/node-irc/tarball/master",
