--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "dependencies": {
       "htmlparser": ">= 0.2.0",
-      "soupselect": "https://github.com/pathsny/node-soupselect/tarball/master",
+      "soupselect": "https://nodeload.github.com/pathsny/node-soupselect/tarball/master",
       "underscore": ">= 1.1.6",
       "compress" : ">= 0.1.9",
       "underscore.date": ">=0.4.0 <0.5",
-      "dirty": "https://github.com/pathsny/node-dirty/tarball/master",
-      "request": "https://github.com/pathsny/request/tarball/master",
-      "irc": "https://github.com/martynsmith/node-irc/tarball/master",
+      "dirty": "https://nodeload.github.com/pathsny/node-dirty/tarball/master",
+      "request": "https://nodeload.github.com/pathsny/request/tarball/master",
+      "irc": "https://nodeload.github.com/martynsmith/node-irc/tarball/master",
       "node-uuid": ">= 1.1.0",
       "twitter-node":">= 0.0.2",
       "ejs": ">= 0.4.2",
