--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
       "connect": ">= 1.4.1",
       "qs": ">= 0.1",
       "pegjs": ">= 0.6.1",
-      "sanitizer": >= "0.0.14"
+      "sanitizer": ">= 0.0.14"
   },
   "private": true
 }
