--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
       "qs": ">= 0.1",
       "pegjs": ">= 0.6.1",
       "sanitizer": ">= 0.0.14",
-      "now": ">= 0.7.5"
+      "now": ">= 0.7.5",
+      "xml2js": ">= 0.1.13"
   },
   "private": true
 }
