--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "pegjs": ">= 0.6.1",
       "sanitizer": ">= 0.0.14",
       "now": ">= 0.7.5",
-      "xml2js": ">= 0.1.13"
+      "xml2js": ">= 0.1.13",
+      "nodemailer": ">= 0.3.20"
   },
   "private": true
 }
