--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
     "node": "*"
   },
   "dependencies": {
-      "underscore": ">= 1.3.3",
-      "compress" : ">= 0.1.9",
+      "underscore": "~ 1.4.4",
+      "compress" : "~ 0.1.9",
       "underscore.date": ">=0.4.0 <0.5",
-      "dirty": "https://nodeload.github.com/pathsny/node-dirty/tarball/master",
-      "request": "2.9.3",
-      "irc": "https://nodeload.github.com/martynsmith/node-irc/tarball/master",
-      "node-uuid": ">= 1.1.0",
+      "dirty": "https://github.com/pathsny/node-dirty/archive/master.tar.gz",
+      "request": "~ 2.21.0",
+      "irc": "~ 0.3.6",
+      "node-uuid": "~ 1.4.0",
       "twitter-node":">= 0.0.2",
-      "ejs": ">= 0.4.2",
-      "gzippo": ">=0.1.2",
-      "connect": ">= 1.4.1",
-      "qs": ">= 0.1",
-      "pegjs": ">= 0.6.1",
-      "sanitizer": ">= 0.0.14",
-      "now": ">= 0.7.5",
-      "xml2js": ">= 0.1.13",
-      "nodemailer": ">= 0.3.20",
-      "simple-xmpp": ">= 0.1.5beta",
-      "socket.io": ">= 0.9.6"
+      "ejs": "~ 0.8.3",
+      "gzippo": "~ 0.2.0",
+      "connect": "~ 2.7.8",
+      "qs": "~ 0.6.3",
+      "pegjs": "~ 0.7.0",
+      "sanitizer": "~ 0.0.15",
+      "now": "~ 0.8.1",
+      "xml2js": "~ 0.2.6",
+      "nodemailer": "~ 0.4.1",
+      "simple-xmpp": "~ 0.1.10",
+      "socket.io": "~ 0.9.14",
+      "connect-route": "~0.1.3"
   },
   "private": true
 }
