--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "simple-xmpp": "~ 0.1.10",
       "socket.io": "~ 0.9.14",
       "connect-route": "~0.1.3",
-	  "coffee-script": "~ 1.6.2"
+	  "coffee-script": "~ 1.6.2",
+	  "inflection": "~ 1.2.5"
   },
   "private": true
 }
