--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "author": "Vishnu Iyengar <pathsny@gmail.com> (blog.vishnuiyengar.com)",
   "directories": {
-    "lib": "."
+    "lib": ".",
+	"bin": "bin"
   },
   "engines": {
-    "node": "*"
+    "node": "~ 0.10.5"
   },
   "dependencies": {
       "underscore": "~ 1.4.4",
@@ -31,7 +32,7 @@
       "now": "~ 0.8.1",
       "xml2js": "~ 0.2.6",
       "nodemailer": "~ 0.4.1",
-      "simple-xmpp": "~ 0.1.10",
+      "simple-xmpp": "~ 0.1.11",
       "socket.io": "~ 0.9.14",
       "connect-route": "~0.1.3",
 	  "coffee-script": "~ 1.6.2",
