--- a/package.json
+++ b/package.json
@@ -23,8 +23,6 @@
       "node-uuid": "~ 1.4.0",
       "twitter-node":">= 0.0.2",
       "ejs": "~ 0.8.3",
-      "gzippo": "~ 0.2.0",
-      "connect": "~ 2.7.8",
       "qs": "~ 0.6.3",
       "pegjs": "~ 0.7.0",
       "sanitizer": "~ 0.0.15",
@@ -32,9 +30,9 @@
       "nodemailer": "~ 0.4.1",
       "simple-xmpp": "~ 0.1.11",
       "socket.io": "~ 0.9.14",
-      "connect-route": "~0.1.3",
 	  "coffee-script": "~ 1.6.2",
-	  "inflection": "~ 1.2.5"
+	  "inflection": "~ 1.2.5",
+	  "express": "~ 3.2.5"
   },
   "private": true
 }
